--- a/intro-to-react-components/public/index.html
+++ b/intro-to-react-components/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    
+
     <title>intro-react-components</title>
-    <link rel="stylesheet" href="./style.css"/>
+    <!-- <link rel="stylesheet" href="./style.css"/> -->
   </head>
   <body>
     <div id="root"></div>
-<script src="../src/index.js" type="text/JSX"></script>
+    <!-- <script src="../src/index.js" type="text/JSX"></script> -->
   </body>
 </html>
