--- a/threeJS/three_html/index.html
+++ b/threeJS/three_html/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Three with HTML</title>
   </head>
   <body>
     <h4 style="text-align: center">ThreeJS with HTML</h4>
     <canvas class="webgl"></canvas>
-    <script src="./script.js" type="module"></script>
+    <script src="./animate.js" type="module"></script>
+    <!-- <script src="./script.js" type="module"></script> -->
   </body>
 </html>
