Transformation, Geometrics, and Materials

--- a/threeJS/three_html/src/index.html
+++ b/threeJS/three_html/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <h4 style="text-align: center">ThreeJS with HTML</h4>
     <canvas class="webgl"></canvas>
-    <script src="./animate.js" type="module"></script>
-    <!-- <script src="./script.js" type="module"></script> -->
+    <!-- <script src="./animate.js" type="module"></script> -->
+    <script src="./script.js" type="module"></script>
   </body>
 </html>
