--- a/threeJS/three_html/index.html
+++ b/threeJS/three_html/index.html
@@ -7,9 +7,10 @@
     <title>Three with HTML</title>
   </head>
   <body>
-    <h4 style="text-align: center">ThreeJS with HTML</h4>
+    <!-- <h4 style="text-align: center">ThreeJS with HTML</h4> -->
     <canvas class="webgl"></canvas>
     <!-- <script src="./animate.js" type="module"></script> -->
-    <script src="./script.js" type="module"></script>
+    <!-- <script src="./script.js" type="module"></script> -->
+    <script src="./particles.js" type="module"></script>
   </body>
 </html>
